--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
         </div>
         <div class="rectangle-6">
            
-                <script src="index.js"></script>
             </div>
         </div>
     </div>
+    <script src="./index.js"></script>
 </body>
 </html>
