--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div> 
         <div class="search-bar">
             <input type="search" placeholder="Enter city name" size="30px" class="search">
-            <button class="search-button"><img src="search-icon.png" alt="Button Image" class="search-img"></button>
+            <button class="search-button"></button>
         </div>
 
         <div class="display">
@@ -47,6 +47,5 @@
             <p class="wind-speed">Wind speed</p>
             <p class="wind-value">1.5 km/h</p>
         </div>
-    <script src="./index.js"></script>
 </body>
 </html>
