--- a/index.html
+++ b/index.html
@@ -47,5 +47,6 @@
             <p class="wind-speed">Wind speed</p>
             <p class="wind-value">1.5 km/h</p>
         </div>
+          <script src="./index.js"></script>
 </body>
 </html>
